--- a/counseling/app/views/counselors/_form.html.erb
+++ b/counseling/app/views/counselors/_form.html.erb
@@ -1,5 +1,5 @@
-<%= bootstrap_form_with model: @counselor do |f| %>
-    <form class="row g-3">
+<%= bootstrap_form_with model: @counselor, class: "row g-3" do |f| %>
+    
         <div class="col-md-6">
             <%= f.text_field :first_name, label: "First Name" %>
                 <%= f.text_field :last_name, label: "Last Name" %>
@@ -8,5 +8,5 @@
                             <%= f.text_field :phone, label: "Phone" %>
                                 <%= f.primary @counselor.persisted? ? 'Update Counselor' : 'Create Counselor' %>
         </div>
-    </form>
+    
     <% end %>
