Impment user authenticate

--- a/counseling/app/views/books/show.html.erb
+++ b/counseling/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<%= title "Book Details" %>
+<% title "Book Details" %>
     <%= render @book %>
         <div class="container">
             <%= link_to "Edit" , edit_book_path(@book) %> | <%= link_to "All Books" , books_path %>
