--- a/counseling/app/views/counselors/show.html.erb
+++ b/counseling/app/views/counselors/show.html.erb
@@ -1,4 +1,4 @@
-<%= title="Counselor" %>
+<% title"Counselor" %>
     <%= render @counselor %>
         <div class="container">
             <%= link_to "Edit" , edit_counselor_path(@counselor) %> | <%= link_to "All Counselors" , counselors_path %>
