--- a/counseling/app/views/users/new.html.erb
+++ b/counseling/app/views/users/new.html.erb
@@ -1,14 +1,2 @@
 <% title "Sign up" %>
-
-    <%= bootstrap_form_for @user, class: "row g-3" do |f| %>
-        <div class="col-md-6">
-                <%= f.alert_message "Please fix the errors below." , error_summary: false , class: "form-label" %>
-                    <%= f.text_field :first_name, placeholder: "First name" , class: "form-label" %>
-                        <%= f.text_field :last_name, placeholder: "Last name" , class: "form-label" %>
-                            <%= f.email_field :email, placeholder: "Email" , class: "form-label" %>
-                                <%= f.password_field :password, placeholder: "Password" , class: "form-label" %>
-                                    <%= f.password_field :password_confirmation, placeholder: "Password confirmation" ,
-                                        class: "form-label" %>
-                                        <%= f.submit "Sign up" , class: "btn btn-primary" %>
-            </div>
-    <% end %>
+<%= render "form" %>
