--- a/counseling/app/views/users/_form.html.erb
+++ b/counseling/app/views/users/_form.html.erb
@@ -1,14 +1,14 @@
 <%= bootstrap_form_for @user, class: "row g-3" do |f| %>
 <div class="col-md-6">
     <%= f.alert_message "Please fix the errors below." , error_summary: false , class: "form-label" %>
-    <%= f.text_field :first_name, placeholder: "First name" , class: "form-label" %>
-    <%= f.text_field :last_name, placeholder: "Last name" , class: "form-label" %>
-    <%= f.email_field :email, placeholder: "Email" , class: "form-label" %>
+    <%= f.text_field :first_name, placeholder: "First name", id:"First_Name", class: "form-label" %>
+    <%= f.text_field :last_name, placeholder: "Last name", id: "Last_Name", class: "form-label" %>
+    <%= f.email_field :email, placeholder: "Email", id: "Email", class: "form-label" %>
     <% if @user.has_password? %>
-        <%= f.password_field :password, placeholder: "Password" , class: "form-label" %>
-        <%= f.password_field :password_confirmation, placeholder: "Password confirmation" , class: "form-label" %>
+        <%= f.password_field :password, placeholder: "Password" , id: "Password", class: "form-label" %>
+        <%= f.password_field :password_confirmation, placeholder: "Password confirmation", id: "Password_Confirmation" , class: "form-label" %>
     <% end %>
-    <%= f.primary @user.persisted?? "Update Info" : "Sign Up" %>
+    <%= f.primary @user.persisted? ? "Update Info" : "Sign Up" %>
 
                                 
 </div>
