Add anthentication macros

--- a/counseling/app/views/layouts/application.html.erb
+++ b/counseling/app/views/layouts/application.html.erb
@@ -145,14 +145,14 @@
         <div class="modal-body">
           <form class="custom-form">
             <div class="custom-form__group">
-              <label for="email">Email</label>
+              <label for="email">e</label>
               <input type="email" 
                      id="email" 
                      class="custom-form__input" 
                      required>
             </div>
             <div class="custom-form__group">
-              <label for="password">Password</label>
+              <label for="password">p</label>
               <input type="password" 
                      id="password" 
                      class="custom-form__input" 
